# opengl-es-study-demo

./: .gitignore  README.md  build.gradle  settings.gradle
OpenGLStudyDemo/: .gitignore  build.gradle
OpenGLStudyDemo/app/: build.gradle
OpenGLStudyDemo/app/src/main/: AndroidManifest.xml
OpenGLStudyDemo/app/src/main/cpp/: BitmapInfo.cpp  BitmapInfo.h  CMakeLists.txt  FragmentShader.h  Shader.cpp  Shader.h  TouchCtlCamera.cpp  TouchCtlCamera.h  native-lib.cpp
OpenGLStudyDemo/app/src/main/java/com/example/openglstudydemo/: Config.kt  EnterActivity.kt  MainActivity.kt  VideoTypeAdapter.kt  VideoTypeBean.kt  VideoTypeEnum.kt  YuvPlayer.java
OpenGLStudyDemo/app/src/main/res/layout/: activity_enter.xml  activity_main.xml  video_type_list_item.xml
OpenGLStudyDemo/app/src/main/res/values/: strings.xml  themes.xml
OpenGLStudyDemo/app/src/main/res/values-night/: themes.xml
OpenGLStudyDemo/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/androidTest/java/com/example/openglstudydemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/openglstudydemo/: MainActivity.kt  YuvPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/openglstudydemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
